fixed layout issues with cookie popup

--- a/scss/application.css
+++ b/scss/application.css
@@ -559,10 +559,9 @@ a {
 .cookie-popup {
   background-color: #fff;
   color: #000;
-  width: 600px;
-  position: absolute;
+  width: auto;
+  position: relative;
   transform: transalte(-50%, -50%);
-  left: 30%;
   top: 30%;
   border-radius: 5px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
@@ -574,6 +573,12 @@ a {
   color: #fff;
 }
 
+@media (min-width: 762px) {
+  .cookie-popup {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
 .cookie-header {
   padding: 15px 20px;
 }
@@ -601,7 +606,9 @@ a {
 
 .cookie-button_container {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
   padding: 19px 20px 20px;
   text-align: right;
   border-top: 1px solid #e5e5e5;
@@ -624,9 +631,15 @@ a {
 
 .manage-cookies {
   background-color: #888;
+  margin-bottom: 30px;
 }
 .manage-cookies:hover {
   background-color: rgb(97, 96, 96);
+}
+
+.spacer {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .main-footer {
