--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -400,10 +400,9 @@
 
     background-color: #fff;
     color: #000;
-    width: 600px;
-    position: absolute;
+    width: auto;
+    position: relative;
     transform: transalte(-50%,-50%);
-    left: 30%;
     top: 30%;
     border-radius: 5px;
     box-shadow: 0 5px 15px rgb(0 0 0 / 50%);
@@ -412,6 +411,13 @@
     z-index: 101;
     a {
         color: #fff;
+    }
+}
+
+@media (min-width: 762px){
+    .cookie-popup{
+        width: 600px;
+        margin: 30px auto;
     }
 }
 
@@ -441,7 +447,9 @@
 
 .cookie-button_container{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     padding: 19px 20px 20px;
     text-align: right;
     border-top: 1px solid #e5e5e5;
@@ -462,7 +470,13 @@
 }
 .manage-cookies{
     background-color: #888;
+    margin-bottom: 30px;
     &:hover{
         background-color: rgb(97, 96, 96);
     }
+}
+
+.spacer{
+    padding-left: 15px;
+    padding-right: 15px;
 }
